Wed Feb 24 14:03:54 1999  Jeffrey A Law  (law@cygnus.com)

	* calls.c (finalize_must_preallocate): New function, extracted from
	expand_call.
	(expand_call): Use finalize_must_preallocate.

	* calls.c (store_one_arg): Mark "variable_size" as possibly unused.

	* regclass.c (record_reg_classes, case 'p'): Set classes appropriately.
	An alternative always fails if it needs a pseudo and no suitable
	register class can be found.

Wed Feb 24 19:47:56 1999  J"orn Rennecke <amylaar@cygnus.co.uk>

	* loop.h (loop_insn_first_p): Declare.
	* loop.c (loop_insn_first_p): No longer static.
	* unroll.c (iteration_info) Fix comparison to
	reg_iv_type->num_elements.
	Before accessing reg_biv_class, check index against
	max_reg_before_loop.
	Fix and enable code for giv iterators.
	(loop_iterations): Compare with reg_iv_type->num_elements instead
	of with max_reg_before_loop.

Wed Feb 24 19:17:11 1999  J"orn Rennecke <amylaar@cygnus.co.uk>

	* unroll.c (unroll_loop): Avoid out-of-bounds index for local_regno.

Wed Feb 24 11:26:41 1999  Vladimir N. Makarov  <vmakarov@cygnus.com>

	* config/sparc/sparc.h (CONDITIONAL_REGISTER_USAGE): Don't use
 	PIC_OFFSET_TABLE_REGNUM for register allocation when -fPIC.

Tue Feb 23 16:24:19 CET 1999 Marc Lehmann <pcg@goof.com>

	* config/i386/i386.md: fix typoe.

Mon Feb 22 19:36:33 1999  Andrew Cagney  <cagney@b1.cygnus.com>

	* config/mips/mips.c (mips_debugger_offset): When TARGET_MIPS16 &&
 	frame_pointer_needed adjust frame size.
	(function_prologue): Don't MIPS16 .mask GPOFFSET. Already adjusted
 	in .frame pseudo-op.
	Frm Jim Wilson  <wilson@cygnus.com>:
	* mips.c (function_prologue): Adjust frame size in .frame pseudo-op
	when TARGET_MIPS16 && frame_pointer_needed.

1999-02-22  Nick Clifton  <nickc@cygnus.com>

	* config/arm/arm.h: Add TARGET_CPU_strongarm1100.
	Add -mno-sched command line switch to disable scheduling of
	instructions into the function's prologue.
	(enum processor_type): Remove.