@@ -1,5 +1,9 @@
 Wed Feb 24 14:03:54 1999  Jeffrey A Law  (law@cygnus.com)
 
+	* calls.c (precompute_arguments): New function, extracted from
+	expand_call.
+	(expand_call): Use precompute_arguments.
+
 	* calls.c (finalize_must_preallocate): New function, extracted from
 	expand_call.
 	(expand_call): Use finalize_must_preallocate.
